--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "2.0.2",
     "@ionic/storage": "2.1.3",
+    "@types/googlemaps": "^3.30.11",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
